add Java 8 compatibility